// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders correctly with tooltip 1`] = `
<DocumentFragment>
  .cache-1uzde3a-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

<div
    style="margin-bottom: 16px; margin-top: 8px; width: 500px;"
  >
    <div
      class="cache-1uzde3a-StyledText e1tg3t120"
    >
      This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="body" 1`] = `
<DocumentFragment>
  .cache-n1702p-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-n1702p-StyledText e1tg3t120"
  >
    body
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodySmall" 1`] = `
<DocumentFragment>
  .cache-1gnf816-StyledText {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1gnf816-StyledText e1tg3t120"
  >
    bodySmall
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodySmallStrong" 1`] = `
<DocumentFragment>
  .cache-11gnu34-StyledText {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-11gnu34-StyledText e1tg3t120"
  >
    bodySmallStrong
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodySmallStronger" 1`] = `
<DocumentFragment>
  .cache-xzk0nm-StyledText {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-xzk0nm-StyledText e1tg3t120"
  >
    bodySmallStronger
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodyStrong" 1`] = `
<DocumentFragment>
  .cache-1xuja14-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1xuja14-StyledText e1tg3t120"
  >
    bodyStrong
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodyStronger" 1`] = `
<DocumentFragment>
  .cache-yh54rt-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-yh54rt-StyledText e1tg3t120"
  >
    bodyStronger
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="caption" 1`] = `
<DocumentFragment>
  .cache-l2pjf5-StyledText {
  color: #4a4f62;
  font-size: 12px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 16px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-l2pjf5-StyledText e1tg3t120"
  >
    caption
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="captionSmall" 1`] = `
<DocumentFragment>
  .cache-1ja09r1-StyledText {
  color: #4a4f62;
  font-size: 10px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 16px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1ja09r1-StyledText e1tg3t120"
  >
    captionSmall
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="heading" 1`] = `
<DocumentFragment>
  .cache-lxfhse-StyledText {
  color: #4a4f62;
  font-size: 25px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-lxfhse-StyledText e1tg3t120"
  >
    heading
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="headingLarge" 1`] = `
<DocumentFragment>
  .cache-11awksw-StyledText {
  color: #4a4f62;
  font-size: 35px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 48px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-11awksw-StyledText e1tg3t120"
  >
    headingLarge
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="headingSmall" 1`] = `
<DocumentFragment>
  .cache-gh5equ-StyledText {
  color: #4a4f62;
  font-size: 21px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 32px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-gh5equ-StyledText e1tg3t120"
  >
    headingSmall
  </div>
</DocumentFragment>
`;

exports[`Text with disabled 1`] = `
<DocumentFragment>
  .cache-31o7do-StyledText {
  color: #c4c9d6;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-31o7do-StyledText e1tg3t120"
  >
    Lorem Ipsum
  </div>
</DocumentFragment>
`;

exports[`Text with italic 1`] = `
<DocumentFragment>
  .cache-1w5sr7l-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-style: italic;
}

<div
    class="cache-1w5sr7l-StyledText e1tg3t120"
  >
    Lorem Ipsum
  </div>
</DocumentFragment>
`;

exports[`Text with multiple nested chidldren renders correctly 1`] = `
<DocumentFragment>
  .cache-n1702p-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-lxfhse-StyledText {
  color: #4a4f62;
  font-size: 25px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-n1702p-StyledText e1tg3t120"
  >
    Lorem
    <span>
      Ipsum
    </span>
    <span
      class="cache-lxfhse-StyledText e1tg3t120"
    >
      <span>
        Dolor
      </span>
    </span>
    Sit
  </div>
</DocumentFragment>
`;

exports[`Text with prominence stronger on non neutral 1`] = `
<DocumentFragment>
  .cache-8g1jz0-StyledText {
  color: #a6102d;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-8g1jz0-StyledText e1tg3t120"
  >
    Lorem Ipsum
  </div>
</DocumentFragment>
`;

exports[`Text with underline 1`] = `
<DocumentFragment>
  .cache-1uxxaaq-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="cache-1uxxaaq-StyledText e1tg3t120"
  >
    Lorem Ipsum
  </div>
</DocumentFragment>
`;
